# handler/taskhandler.go
@@ -1,8 +1,11 @@
 package handler
 
 import (
+	"encoding/json"
 	"log"
 	"net/http"
+
+	"github.com/nicuf/file-processor-api/task"
 )
 
 type TaskHandler struct {
@@ -13,45 +16,49 @@ func NewTaskHandler(l *log.Logger) *TaskHandler {
 	return &TaskHandler{l}
 }
 
-func (taskHandler *TaskHandler) ServeHTTP(rw http.ResponseWriter, req *http.Request) {
-
-	if req.Method == http.MethodPost {
-		taskHandler.addTask(rw, req)
-		return
-	}
-
-	if req.Method == http.MethodGet {
-		taskHandler.getTaskInfo(rw, req)
-		return
-	}
-}
-
 //Send a file to analysis that is specified via the ID
 // swagger:route POST /addtask/{uuid} addtask addTask
 // Add a task to be processed
 // responses:
-//  default: genericError
 //	200: taskStatusResponse
-func (taskHandler *TaskHandler) addTask(rw http.ResponseWriter, req *http.Request) {
-
+func (taskHandler *TaskHandler) AddTask(rw http.ResponseWriter, req *http.Request) {
+	taskHandler.log.Println("Handle POST Task.")
+	rw.Header().Add("Content-Type", "application/json")
+	status := task.Queued
+	encoder := json.NewEncoder(rw)
+	err := encoder.Encode(status)
+	if err != nil {
+		http.Error(rw, "Unable to encode response", http.StatusInternalServerError)
+	}
 }
 
 //Get information about an analysis (execution status and results)
 // swagger:route GET /task/{id} task getTaskInfo
 // Returns task info
 // responses:
-//  default: genericError
 //  200: taskInfoResponse
-func (taskHandler *TaskHandler) getTaskInfo(rw http.ResponseWriter, req *http.Request) {
-
+func (taskHandler *TaskHandler) GetTaskInfo(rw http.ResponseWriter, req *http.Request) {
+	taskHandler.log.Println("Handle Get Task.")
+	rw.Header().Add("Content-Type", "application/json")
+	task := task.Task{
+		ID:           "1",
+		CreationTime: "today",
+		FileUUID:     "123e4567-e89b-12d3-a456-426655440000",
+		Status:       task.Finished,
+		Result:       []string{"first", "second", "third"},
+	}
+	encoder := json.NewEncoder(rw)
+	err := encoder.Encode(task)
+	if err != nil {
+		http.Error(rw, "Unable to encode response", http.StatusInternalServerError)
+	}
 }
 
 //Search for the files that contain a particular UUID
 // swagger:route GET /files/{uuid} files searchFiles
 // Returns a list of files with UUID
 // responses:
-//  default: genericError
 //  200: searchFilesResponse
-func (taskHandler *TaskHandler) searchFiles(rw http.ResponseWriter, req *http.Request) {
+func (taskHandler *TaskHandler) SearchFiles(rw http.ResponseWriter, req *http.Request) {
 
 }
